Fixes according to SonarCube